Successfully run against Live AVMS db once
Added SingleFullUpdate, ExcludeVacancy, DummyRun options
Make it easier to switch on/off threading
In unthreaded case, continue to process the next table even if there was a
non-fatal error
Put in some infrastructure to handle deletes properly, for the moment just
report.
Improve error detection / reporting on insert / update and remove
resorting to binary chop / single insert
Fix missing throw from DeleteAll
Tweak BatchSizeMultiplers
Weight insert/update batch size by table BatchSizeMultiplier to avoid
timeouts
Don't blank attachments

--- a/src/SFA.Apprenticeships.Data.Migrate/SFA.Apprenticeships.Data.Migrate.csproj
+++ b/src/SFA.Apprenticeships.Data.Migrate/SFA.Apprenticeships.Data.Migrate.csproj
@@ -102,6 +102,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AvmsSyncRepository.cs" />
+    <Compile Include="BaseMutateTarget.cs" />
     <Compile Include="IAvmsSyncRepository.cs" />
     <Compile Include="MutateTarget.cs" />
     <Compile Include="IMutateTarget.cs" />
