--- a/src/SFA.Apprenticeships.Web.Candidate.AcceptanceTests/App.config
+++ b/src/SFA.Apprenticeships.Web.Candidate.AcceptanceTests/App.config
@@ -22,7 +22,7 @@
   <specBind>
     <!-- For additional details on SpecBind configuration options see the project site. -->
     <application startUrl="https://local.findapprenticeship.service.gov.uk/" />
-    <browserFactory provider="SpecBind.Selenium.SeleniumBrowserFactory, SpecBind.Selenium" browserType="FireFox" ensureCleanSession="true" elementLocateTimeout="00:00:05" pageLoadTimeout="00:01:00" />
+    <browserFactory provider="SpecBind.Selenium.SeleniumBrowserFactory, SpecBind.Selenium" browserType="Chrome" ensureCleanSession="true" elementLocateTimeout="00:00:05" pageLoadTimeout="00:01:00" />
   </specBind>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
