--- a/src/SFA.Apprenticeships.Web.Raa.Common.UnitTests/SFA.Apprenticeships.Web.Raa.Common.UnitTests.csproj
+++ b/src/SFA.Apprenticeships.Web.Raa.Common.UnitTests/SFA.Apprenticeships.Web.Raa.Common.UnitTests.csproj
@@ -173,6 +173,7 @@
     <Compile Include="Providers\VacancyPosting\TestBase.cs" />
     <Compile Include="Providers\VacancyPosting\TrainingDetailsTests.cs" />
     <Compile Include="Providers\VacancyProvider\UpdateRequirementsProspectsViewModelTests.cs" />
+    <Compile Include="Providers\VacancyProvider\UpdateFurtherVacancyDetailsViewModelTests.cs" />
     <Compile Include="Providers\VacancyProvider\UpdateTrainingDetailsViewModelTests.cs" />
     <Compile Include="Providers\VacancyProvider\UpdateQuestionsViewModelTests.cs" />
     <Compile Include="Providers\VacancyProvider\UpdateNewVacancyViewModelTests.cs" />
