--- a/src/SFA.Apprenticeships.Infrastructure.UnitTests/packages.config
+++ b/src/SFA.Apprenticeships.Infrastructure.UnitTests/packages.config
@@ -1,15 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AutoFixture" version="3.31.3" targetFramework="net451" />
+  <package id="AutoFixture" version="3.38.1" targetFramework="net451" />
   <package id="AutoMapper" version="3.3.1" targetFramework="net451" />
-  <package id="FluentAssertions" version="3.5.0" targetFramework="net451" />
-  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.1.0" targetFramework="net451" />
-  <package id="Moq" version="4.2.1507.0118" targetFramework="net451" />
+  <package id="FluentAssertions" version="4.2.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net451" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
+  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.1" targetFramework="net451" />
+  <package id="Moq" version="4.2.1510.2205" targetFramework="net451" />
   <package id="NBuilder" version="3.0.1.1" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net451" />
   <package id="NUnit" version="2.6.4" targetFramework="net451" />
+  <package id="RazorGenerator.Mvc" version="2.3.12" targetFramework="net451" />
   <package id="RestSharp" version="105.1.0" targetFramework="net451" />
   <package id="Sendgrid" version="5.1.0" targetFramework="net451" />
   <package id="SendGrid.SmtpApi" version="1.2.1" targetFramework="net451" />
+  <package id="WebActivatorEx" version="2.0.6" targetFramework="net451" />
   <package id="WindowsAzure.ServiceBus" version="3.0.1" targetFramework="net451" />
 </packages>
