--- a/src/SFA.Apprenticeships.Web.Candidate.UnitTests/packages.config
+++ b/src/SFA.Apprenticeships.Web.Candidate.UnitTests/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AutoFixture" version="3.31.3" targetFramework="net451" />
+  <package id="AutoFixture" version="3.38.1" targetFramework="net451" />
   <package id="AutoMapper" version="3.3.1" targetFramework="net451" />
-  <package id="FluentAssertions" version="3.5.0" targetFramework="net451" />
+  <package id="FluentAssertions" version="4.2.2" targetFramework="net451" />
   <package id="FluentValidation" version="5.6.2.0" targetFramework="net451" />
   <package id="FluentValidation.MVC5" version="5.6.2.0" targetFramework="net451" />
   <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net451" />
@@ -13,10 +13,12 @@
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net451" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
-  <package id="Moq" version="4.2.1507.0118" targetFramework="net451" />
+  <package id="Moq" version="4.2.1510.2205" targetFramework="net451" />
   <package id="NUnit" version="2.6.4" targetFramework="net451" />
+  <package id="RazorGenerator.Mvc" version="2.3.12" targetFramework="net451" />
   <package id="RazorGenerator.Testing" version="2.3.4" targetFramework="net451" />
   <package id="ReflectionMagic" version="2.1.0" targetFramework="net451" />
   <package id="structuremap" version="3.1.6.186" targetFramework="net451" />
   <package id="TestStack.FluentMVCTesting" version="3.0.0" targetFramework="net451" />
+  <package id="WebActivatorEx" version="2.0.6" targetFramework="net451" />
 </packages>
