--- a/src/SFA.Apprenticeships.Web.Common/packages.config
+++ b/src/SFA.Apprenticeships.Web.Common/packages.config
@@ -14,11 +14,12 @@
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
+  <package id="Moq" version="4.2.1510.2205" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net451" />
   <package id="NLog" version="4.0.1" targetFramework="net451" />
   <package id="RazorGenerator.Mvc" version="2.3.12" targetFramework="net451" />
   <package id="structuremap" version="3.1.6.186" targetFramework="net451" />
   <package id="structuremap.web" version="3.1.0.133" targetFramework="net451" />
-  <package id="WebActivatorEx" version="2.0.3" targetFramework="net451" />
-  <package id="WebGrease" version="1.5.2" targetFramework="net451" />
+  <package id="WebActivatorEx" version="2.0.6" targetFramework="net451" />
+  <package id="WebGrease" version="1.6.0" targetFramework="net451" />
 </packages>
