Testing Chrome with acceptance tests

--- a/src/SFA.Apprenticeships.Web.Candidate.AcceptanceTests/App.Dev.config
+++ b/src/SFA.Apprenticeships.Web.Candidate.AcceptanceTests/App.Dev.config
@@ -6,6 +6,6 @@
   </appSettings>
   <specBind>
     <application startUrl="https://dev.findapprenticeship.service.gov.uk/" xdt:Transform="Replace"/>
-    <browserFactory browserType="FireFox" xdt:Transform="SetAttributes"/>
+    <browserFactory browserType="Chrome" xdt:Transform="SetAttributes"/>
   </specBind>
 </configuration>
