Removing invalid references to Web.Raa.Common and set all acceptance tests to use Chrome

--- a/src/SFA.Apprenticeships.Application.VacancyPosting/SFA.Apprenticeships.Application.VacancyPosting.csproj
+++ b/src/SFA.Apprenticeships.Application.VacancyPosting/SFA.Apprenticeships.Application.VacancyPosting.csproj
@@ -87,6 +87,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configuration\VacancyPostingConfiguration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VacancyLockingService.cs" />
     <Compile Include="VacancyPostingService.cs" />
@@ -112,15 +113,12 @@
       <Project>{cf497dd1-550d-4203-8fbf-c0a3b0109d2b}</Project>
       <Name>SFA.Apprenticeships.Domain.Raa.Interfaces</Name>
     </ProjectReference>
-    <ProjectReference Include="..\SFA.Apprenticeships.Web.Raa.Common\SFA.Apprenticeships.Web.Raa.Common.csproj">
-      <Project>{700D41DD-527A-42BD-94D2-FD49A5F00A18}</Project>
-      <Name>SFA.Apprenticeships.Web.Raa.Common</Name>
-    </ProjectReference>
     <ProjectReference Include="..\SFA.Infrastructure\SFA.Infrastructure.csproj">
       <Project>{1F500137-C8E9-49AA-886E-1922D9D870EB}</Project>
       <Name>SFA.Infrastructure</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
