--- a/src/SFA.Apprenticeships.Web.Candidate.AcceptanceTests/App.Pre.config
+++ b/src/SFA.Apprenticeships.Web.Candidate.AcceptanceTests/App.Pre.config
@@ -3,6 +3,6 @@
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
   <specBind>
     <application startUrl="https://pre.findapprenticeship.service.gov.uk/" xdt:Transform="Replace"/>
-    <browserFactory browserType="FireFox" xdt:Transform="SetAttributes"/>
+    <browserFactory browserType="Chrome" xdt:Transform="SetAttributes"/>
   </specBind>
 </configuration>
