--- a/src/SFA.Apprenticeships.Domain.Entities.Raa/SFA.Apprenticeships.Domain.Entities.Raa.csproj
+++ b/src/SFA.Apprenticeships.Domain.Entities.Raa/SFA.Apprenticeships.Domain.Entities.Raa.csproj
@@ -95,7 +95,9 @@
     <Compile Include="Parties\VerifiedOrganisationSummary.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reference\County.cs" />
+    <Compile Include="Reference\Framework.cs" />
     <Compile Include="Reference\LocalAuthority.cs" />
+    <Compile Include="Reference\Occupation.cs" />
     <Compile Include="Reference\Region.cs" />
     <Compile Include="Reference\RegionalTeam.cs" />
     <Compile Include="Reference\RegionalTeamMapper.cs" />
