--- a/src/SFA.Apprenticeships.Infrastructure.Repositories.Sql/SFA.Apprenticeships.Infrastructure.Repositories.Sql.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.Repositories.Sql/SFA.Apprenticeships.Infrastructure.Repositories.Sql.csproj
@@ -140,12 +140,12 @@
     <Compile Include="Schemas\Reference\Entities\LocalAuthority.cs" />
     <Compile Include="Schemas\Reference\Entities\Region.cs" />
     <Compile Include="Schemas\Reference\Entities\County.cs" />
-    <Compile Include="Schemas\Reference\Entities\Framework.cs" />
+    <Compile Include="Schemas\Reference\Entities\ApprenticeshipFramework.cs" />
     <Compile Include="Schemas\Reference\Entities\FrameworkStatus.cs" />
     <Compile Include="Schemas\Reference\Entities\Level.cs" />
-    <Compile Include="Schemas\Reference\Entities\Occupation.cs" />
+    <Compile Include="Schemas\Reference\Entities\ApprenticeshipOccupation.cs" />
     <Compile Include="Schemas\Reference\Entities\OccupationStatus.cs" />
-    <Compile Include="Schemas\Reference\Entities\Sector.cs" />
+    <Compile Include="Schemas\Reference\Entities\StandardSector.cs" />
     <Compile Include="Schemas\Reference\Entities\Standard.cs" />
     <Compile Include="Schemas\Reference\ReferenceMappers.cs" />
     <Compile Include="Schemas\Reference\ReferenceRepository.cs" />
